[package]
name = "permissions_module"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@elrond.com>", "Claudiu-Marcel Bruda <claudiu.bruda@elrond.com>" ]
edition = "2018"

[lib]
path = "src/permissions_module.rs"

[dependencies]
bitflags = "1.3.2"

[dependencies.elrond-wasm]
version = "0.38.0"
features = ["esdt-token-payment-legacy-decode",]
